<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/passcode_text_indication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black_transparency_54"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passcode_star_1"
            style="@style/PasscodeStarStyle"/>
        <ImageView
            android:id="@+id/passcode_star_2"
            style="@style/PasscodeStarStyle"/>
        <ImageView
            android:id="@+id/passcode_star_3"
            style="@style/PasscodeStarStyle"/>
        <ImageView
            android:id="@+id/passcode_star_4"
            style="@style/PasscodeStarStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passcode_action"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passcode_digit_1"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_1" />

            <TextView
                android:id="@+id/passcode_digit_2"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_2" />

            <TextView
                android:id="@+id/passcode_digit_3"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passcode_digit_4"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_4" />

            <TextView
                android:id="@+id/passcode_digit_5"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_5" />

            <TextView
                android:id="@+id/passcode_digit_6"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passcode_digit_7"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_7" />

            <TextView
                android:id="@+id/passcode_digit_8"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_8" />

            <TextView
                android:id="@+id/passcode_digit_9"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passcode_forget"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/passcode_forget"
                android:textSize="18sp"
                android:textColor="@color/black_transparency_54"
                android:background="@drawable/ripple_material_light_non_transparent_borderless_selector"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/passcode_digit_0"
                style="@style/PasscodeDigitTextViewStyle"
                android:text="@string/passcode_digit_0" />

            <ImageView
                android:id="@+id/passcode_clear_action"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@mipmap/ic_action_clear"
                android:background="@drawable/ripple_material_light_non_transparent_borderless_selector"/>

        </LinearLayout>

    </LinearLayout>

</merge>