<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/passcode_reset_question_title"
        android:textColor="@color/accent_material_light"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passcode_reset_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:text="@string/passcode_reset_question_example"
            android:textSize="16sp"
            android:textColor="@color/black_transparency_87"/>

        <ImageView
            android:id="@+id/passcode_reset_question_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:src="@mipmap/ic_action_next_item"
            android:background="@drawable/ripple_material_light_non_transparent_borderless_selector"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/passcode_reset_answer_title"
        android:textColor="@color/accent_material_light"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/passcode_reset_answer_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/passcode_reset_edit_text_hint"/>

</LinearLayout>