<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="144dp"
    android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/note_create_time_hint"
        android:textSize="14sp"
        android:textColor="@color/black_transparency_54"/>

    <TextView
        android:id="@+id/fragment_note_detail_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="@color/black_transparency_87"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/note_last_update_time_hint"
        android:textSize="14sp"
        android:textColor="@color/black_transparency_54"/>

    <TextView
        android:id="@+id/fragment_note_detail_last_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="@color/black_transparency_87"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/black_transparency_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/note_create_location_hint"
        android:textSize="14sp"
        android:textColor="@color/black_transparency_54"/>

    <TextView
        android:id="@+id/fragment_note_detail_create_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:textSize="14sp"
        android:textColor="@color/black_transparency_87" />
</LinearLayout>